--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "movie_rental",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "setup": "node_modules/.bin/react-toolbox-themr"
   },
   "devDependencies": {
     "react-toolbox-themr": "^1.0.2"
